# luminoracore

./: .gitignore  5_MINUTE_QUICK_START.md  ACTUALIZACION_READMES.md  ALL_DATABASES_FLEXIBLE_CONFIGURATION_GUIDE.md  ANALISIS_GAPS_100_PORCIENTO.md  ARCHITECTURE.md  ARCHITECTURE_RESTRUCTURE_PLAN.md  AUDITORIA_FEATURES_README.md  BACKEND_API_FIXES.md  BACKEND_DEBUGGING_GUIDE.md  BACKEND_IMPLEMENTATION_GUIDE.md  BACKEND_INTEGRATION_GUIDE_FINAL.md  BACKEND_TEAM_MIGRATION_IMPACT.md  BUILDING_MODULAR_AI_PERSONALITIES.md  CAMBIOS_PROVIDERS.md  CAMBIOS_REFERENCIAS_DIRECTORIOS.md  CAMBIOS_REQUERIDOS_EQUIPO_BACKEND.md  CARACTERISTICAS_TECNICAS_LUMINORACORE.md  CEO_BUSINESS_CASE.md  CEO_EXECUTIVE_SUMMARY.md  CHAT_STORAGE_FIX_IMPLEMENTATION.md  CHAT_STORAGE_ISSUE_ANALYSIS.md  CHEATSHEET.md  CLIENT_TEST_RESULTS.md  COMO_PROBAR_WIZARD.md  COMO_USAR_LUMINORACORE.md  COMPLETE_CLI_AND_CONFIGURATION_GUIDE.md  COMPLETE_HARDCODE_ELIMINATION_REPORT.md  COMPLETE_MEMORY_SYSTEM_IMPLEMENTATION.md  COMPREHENSIVE_CHAT_TEST_RESULTS.md  COMPREHENSIVE_TEST_RESULTS.md  CONVERSATION_MEMORY_BUG_FIX_REPORT.md  CONVERSATION_MEMORY_CRITICAL_FIX.md  CONVERSATION_MEMORY_FIX_SUMMARY.md  CONVERSATION_MEMORY_INTEGRATION_FIX.md  CORRECCIONES_README_HONESTAS.md  CREATING_PERSONALITIES.md  CRITICAL_FIXES_AND_VALIDATION.md  Claude PRD de producto.txt  DEMO_PROJECT_INTEGRATION_GUIDE.md  (+226 more)
backup_before_migration_20251025_232734/luminoracore/: CONTRIBUTING.md  pyproject.toml  requirements.txt
backup_before_migration_20251025_232734/luminoracore/examples/: blending_demo.py  performance_demo.py  v1_1_quick_example.py
backup_before_migration_20251025_232734/luminoracore/tests/: test_step_5_fact_extraction.py
luminoracore-cli/: CHANGELOG.md  README.md  baseline_cli_tests.txt  luminoracore_cli_logging_fix.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
luminoracore-cli/luminoracore_cli/: __init__.py  __version__.py  logging_config.py  main.py
luminoracore-cli/luminoracore_cli/commands/: __init__.py  blend.py  compile.py  conversation_memory.py  create.py  info.py  init.py  list.py  memory.py  migrate.py  snapshot.py  storage.py  test.py  update.py  validate.py
luminoracore-cli/luminoracore_cli/commands_new/: memory_new.py
luminoracore-cli/luminoracore_cli/config/: __init__.py  settings.py  validation.py
luminoracore-cli/luminoracore_cli/core/: blender.py  client.py  compiler.py  downloader.py  tester.py  validator.py
luminoracore-cli/luminoracore_cli/interactive/: README.md  __init__.py  chat.py
luminoracore-cli/luminoracore_cli/server/: README.md  app.py
luminoracore-cli/luminoracore_cli/templates/: __init__.py  loader.py
luminoracore-cli/luminoracore_cli/utils/: errors.py  files.py  formatting.py  http.py
luminoracore-cli/scripts/: build-binary.sh  install-completions.sh  setup-dev.sh  test-cli.sh
luminoracore-cli/tests/: README.md  __init__.py  conftest.py  test_config.py  test_validate.py
luminoracore-sdk-python/: CHANGELOG.md  DOCKER.md  DYNAMODB_CONFIGURATION_GUIDE.md  Dockerfile  ENV_VARIABLES.md  LICENSE  LUMINORACORE_SDK_COMPLETE_FIX_GUIDE.md  README.md  README_TESTING.md  baseline_sdk_tests.txt  docker-compose.production.yml  docker-compose.yml  docker-entrypoint.sh  luminoracore_sdk_aws_credentials_fix.py  luminoracore_sdk_improved_methods.py  luminoracore_sdk_logging_fix.py  luminoracore_sdk_validation_fix.py  pyproject.toml  requirements.txt  setup.py  test_aws_credentials_fix.py  test_complete_integration.py  test_improved_methods.py  test_logging_fix.py  test_runner.py  test_validation_fix.py
luminoracore-sdk-python/docs/: api_reference.md
luminoracore-sdk-python/examples/: README.md  __init__.py  basic_usage.py  personality_blending.py  simple_usage.py  v1_1_all_storage_options.py  v1_1_complete_memory_example.py  v1_1_complete_real_implementation.py  v1_1_sdk_usage.py  v1_2_optimization_example.py  voice_bot_dynamic_personality.py
luminoracore-sdk-python/examples/integrations/: README.md  fastapi_integration.py  fastapi_integration_v1_2.py  streamlit_app.py
luminoracore-sdk-python/luminoracore/: __init__.py  client.py
luminoracore-sdk-python/luminoracore/monitoring/: logger.py
luminoracore-sdk-python/luminoracore/providers/: __init__.py  base.py  deepseek.py  factory.py
luminoracore-sdk-python/luminoracore/session/: storage.py
luminoracore-sdk-python/luminoracore/types/: __init__.py  personality.py  provider.py  session.py
luminoracore-sdk-python/luminoracore_sdk/: __init__.py  __version__.py  cli.py  client.py  client_backup.py  client_hybrid.py  client_new.py  client_v1_1.py  conversation_memory_manager.py
luminoracore-sdk-python/luminoracore_sdk/analysis/: README.md  __init__.py  sentiment_analyzer.py
luminoracore-sdk-python/luminoracore_sdk/config/: README.md  __init__.py  provider_urls.json
luminoracore-sdk-python/luminoracore_sdk/evolution/: README.md  __init__.py  personality_evolution.py
luminoracore-sdk-python/luminoracore_sdk/monitoring/: README.md  __init__.py  metrics.py  tracer.py
luminoracore-sdk-python/luminoracore_sdk/personalities/: __init__.py  _template.json  dr_luna_v1_1.json  lila_charm.json  marcus_sarcastic.json  rocky_inspiration.json
luminoracore-sdk-python/luminoracore_sdk/personality/: README.md  __init__.py  adapter.py  blender.py  manager.py  validator.py
luminoracore-sdk-python/luminoracore_sdk/providers/: README.md  __init__.py  anthropic.py  base.py  cohere.py  deepseek.py  factory.py  google.py  llama.py  mistral.py  openai.py
luminoracore-sdk-python/luminoracore_sdk/session/: README.md  __init__.py  conversation.py  manager.py  memory.py  memory_v1_1.py  storage.py  storage_dynamodb_flexible.py  storage_dynamodb_v11.py  storage_mongodb_flexible.py  (+9 more)
luminoracore-sdk-python/tests/: README.md  __init__.py  test_backward_compatibility.py  test_complete_memory_operations.py  test_memory_manager.py  test_memory_with_optimization.py  test_optimization_integration.py  test_personality_adapter.py  test_personality_blender.py  test_step_11_client_v1_1.py  test_step_8_storage_v1_1.py  test_step_9_types.py
(+365 files in other folders)
